<resources>
    <string name="app_name">Paint</string>
    <string name="splash_content">Paint</string>
    <string name="button_exit">Exit</string>
    <string name="button_help">Help</string>
    <string name="button_return">Return</string>
    <string name="button_start">Start</string>
    <string name="text_help">Help Text</string>
    <string name="title_activity_settings">Settings</string>
    <string name="setting_start">Start</string>
    <string name="title_bg_color">Background Color</string>
    <string name="title_fg_color">Foreground Color</string>
    <string name="title_paint_type">Paint Type</string>
    <string name="title_stroke_width">Stroke Width</string>
    <string name="title_paint_style">Fill Style</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="setting_group_color">Color</string>
    <string name="setting_group_paint">Paint</string>
    <string name="switch_fill">Fill</string>
    <string name="switch_stroke">Stroke</string>
    <string name="title_save">Export as .png</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="setting_group_advanced">Advanced</string>
    <string name="title_use_grid">Use Grid</string>
    <string name="title_grid_size">Grid Size</string>
    <string name="setting_group_about_us">About Us</string>
    <string name="developer_0">lyx</string>
    <string name="developer_1">sb</string>
    <string name="developer_2">whr</string>

    <string name="text_title">help</string>
    <string name="text_1">\t\tWelcome to the Paint  app, where you can experience the fun of drawing.</string>
    <string name="text_2">\t\tWhen you start drawing, you can draw by dragging. The drawing interface can be clicked in four corners:</string>
    <string name="text_list_1_1">Top left corner: Export</string>
    <string name="text_list_1_2">Bottom left corner: Setting</string>
    <string name="text_list_1_3">Top right corner: Undo</string>
    <string name="text_list_1_4">Bottom right corner: restore</string>
    <string name="text_title_1">Export</string>
    <string name="text_3">\t\tHere, you can export your drawn images to a .png format and share them with your friends..png格式的图片，可以分享给您的好友们</string>
    <string name="text_title_2">Setting</string>
    <string name="text_4">\t\tIn the settings interface, you can set various properties of the current drawing board:</string>
    <string name="text_title_2_1">background color</string>
    <string name="text_5">\t\tHere you can choose the rich background color we have prepared for you.</string>
    <string name="text_title_2_2">Foreground color</string>
    <string name="text_6">\t\tHere you can choose the color of the next drawing graphic.</string>
    <string name="text_title_2_3">Graphic shape</string>
    <string name="text_7">\t\tHere you can choose the shape of the next drawing graphic</string>
    <string name="text_8">\t\tWe have provided you with the following graphics:</string>
    <string name="text_list_2_1">Brush (paint free path)</string>
    <string name="text_list_2_2">Line segment</string>
    <string name="text_list_2_3">circle</string>
    <string name="text_list_2_4">rectangle</string>
    <string name="text_title_2_4">Whether to fill</string>
    <string name="text_9">\t\tYou can choose whether the graphic fills the color</string>
    <string name="text_title_2_5">Line width</string>
    <string name="text_10">\t\tYou can set the width of the line</string>
    <string name="text_title_2_6">Dependent grid</string>
    <string name="text_11">\t\tYou can choose whether to enable the grid function.</string>
    <string name="text_12">\t\tIf you turn this feature on, all your drawing will be strictly in line with the grid, which is the gospel of OCD users.</string>
    <string name="text_13">\t\tIf you have this feature turned on, you can also set the grid size here.</string>
    <string name="text_title_3">Undo</string>
    <string name="text_14">\t\tYou can undo your previous step</string>
    <string name="text_title_4">restore</string>
    <string name="text_15">\t\tYou can resume your last undo operation</string>

    <string-array name="setting_list_color">
        <item>Black</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Dark Gray</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Light Gray</item>
        <item>Magenta</item>
        <item>Red</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="setting_list_color_values" translatable="false">
        <item>#FF000000</item>
        <item>#FF0000FF</item>
        <item>#FF00FFFF</item>
        <item>#FF444444</item>
        <item>#FF888888</item>
        <item>#FF00FF00</item>
        <item>#FFCCCCCC</item>
        <item>#FFFF00FF</item>
        <item>#FFFF0000</item>
        <item>#FFFFFFFF</item>
        <item>#FFFFFF00</item>
    </string-array>
    <string-array name="setting_list_type">
        <item>Circle</item>
        <item>Line</item>
        <item>Path</item>
        <item>Rectangle</item>
    </string-array>
    <string-array name="setting_list_type_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>